[gd_scene load_steps=2 format=4 uid="uid://evolve_modal_scene"]

[ext_resource type="Script" path="res://scripts/ui/EvolveModal.gd" id="1_script"]

[node name="EvolveModal" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Evolution"
horizontal_alignment = 1

[node name="ContentLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Coming soon!

Evolve your minions
into stronger forms."
horizontal_alignment = 1

[node name="CloseBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Close"
